<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Book Store Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all">Delete All Inventory</string>

    <!-- Dummy data values -->
    <string name="dummy_name">Travel Guide</string>
    <string name="dummy_supplier_name">Acme Publishing</string>
    <string name="dummy_supplier_phone">(555)555-5555</string>

    <string name="products_table_contains">The products table contains %1$d %2$s</string>
    <string name="product">product.\n\n</string>
    <string name="products">products.\n\n</string>

    <string name="empty_view_title_text">No inventory. Time to re-stock.</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <string name="rows_deleted">Rows deleted: </string>
    <string name="delete_all_dialog_msg">Delete all products from inventory?</string>;
    <string name="delete_confirm">Delete</string>;
    <string name="cancel">Cancel</string>;

    <string name="button_sale">Sale</string>
    <string name="title_activity_detail">Edit Product</string>;
    <string name="detail_title_new_product">Add a Product</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="product_name">Name</string>
    <string name="name_label">Name:</string>
    <string name="price">Price</string>
    <string name="price_label">Price:</string>
    <string name="category">Category</string>
    <string name="product_descripton">Product Description</string>
    <string name="quantity_in_stock">Quantity In Stock</string>
    <string name="quantity_in_stock_label">Quantity In Stock:</string>
    <string name="quantity_on_order">Quantity On Order</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone Number</string>

    <string name="category_unknown">Unknown</string>
    <string name="category_book">Book</string>
    <string name="category_periodical">Periodical</string>
    <string name="category_e_device">Electronic Device</string>
    <string name="category_office_supply">Office Supply</string>

    <string name="price_default_value">$0.00</string>
    <string name="quantity_default_value">0</string>

    <string name="edit_delete_failed">Error deleting product.</string>
    <string name="edit_delete_successful">Product deleted.</string>
    <string name="delete_dialog_msg">Delete this product?</string>

    <string name="order">Order</string>
    <string name="order_phone_num_required_msg">Phone number must be populated to place an order.</string>

    <string name="quantity_increase">+</string>
    <string name="quantity_decrease">-</string>
    <string name="quantity_negative_value_warning">Quantity cannot be less than 0.</string>

    <string name="populate_all_fields_msg">Please populate all fields before saving.</string>
    <string name="save_successful">Save successful!</string>
    <string name="save_failed">Save failed. Please check all values entered.</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
</resources>
