<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_default"
        android:layout_marginStart="@dimen/layout_margin_default"
        android:layout_marginTop="@dimen/layout_margin_default"
        android:text="@string/name_label"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintEnd_toStartOf="@+id/product_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="@dimen/min_size"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="@dimen/layout_margin_data_value"
        android:layout_marginRight="16dp"
        android:layout_marginStart="@dimen/layout_margin_data_value"
        android:fontFamily="san-serif-medium"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_label"
        tools:text="War and Peace" />

    <TextView
        android:id="@+id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_default"
        android:layout_marginStart="@dimen/layout_margin_default"
        android:layout_marginTop="@dimen/layout_margin_vertical"
        android:text="@string/price_label"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintEnd_toStartOf="@+id/price"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_data_value"
        android:layout_marginStart="@dimen/layout_margin_data_value"
        android:fontFamily="san-serif"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/price_label"
        app:layout_constraintStart_toEndOf="@+id/price_label"
        tools:text="$9.99" />

    <TextView
        android:id="@+id/quantity_in_stock_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_default"
        android:layout_marginStart="@dimen/layout_margin_default"
        android:layout_marginTop="@dimen/layout_margin_vertical"
        android:text="@string/quantity_in_stock_label"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintEnd_toStartOf="@+id/quantity_in_stock"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_label" />

    <TextView
        android:id="@+id/quantity_in_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_data_value"
        android:layout_marginStart="@dimen/layout_margin_data_value"
        android:fontFamily="san-serif"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/quantity_in_stock_label"
        app:layout_constraintStart_toEndOf="@+id/quantity_in_stock_label"
        tools:text="2" />

    <Button
        android:id="@+id/sale_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/layout_margin_vertical"
        android:layout_marginEnd="@dimen/layout_margin_default"
        android:layout_marginLeft="@dimen/layout_margin_default"
        android:layout_marginRight="@dimen/layout_margin_default"
        android:layout_marginStart="@dimen/layout_margin_default"
        android:layout_marginTop="@dimen/layout_margin_vertical"
        android:focusable="false"
        android:text="@string/button_sale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_in_stock_label"
        tools:text="@string/button_sale" />

</android.support.constraint.ConstraintLayout>